# initialTRD

./: .gitignore  README.md  fetch_and_align_data.py  model_testing.py  project_paths.py  pseudocode.md  pyproject.toml  test.md  test_model_testing.py  test_trading_strategy.py  test_train_model.py  trainModel_pseudocode.md  train_model.py
artifacts/: bist_lstm.pt  bist_lstm.pt.json  features.csv  strategy_signal.json  walk_forward_results.csv
data/: raw_market.csv  stock_a.csv  stock_b.csv
docs/: design_notes.md
scripts/: run_feature_engineering.py  run_lstm_training.py  run_strategy_signal.py  run_walk_forward_test.py
src/initial_trd/: __init__.py  backtesting.py  data_fetch.py  evaluation.py  paths.py  regimes.py  strategy.py  training.py
src/initial_trd/cli/: __init__.py  backtest_pairs.py  feature_engineering.py  pipeline.py  signal.py  train_lstm.py  tune_epochs.py  walk_forward.py
tests/: test_backtesting.py  test_data_fetch.py  test_evaluation.py  test_pipeline.py  test_strategy.py  test_train_lstm.py  test_training.py  test_tune_epochs.py
